--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -21,6 +21,9 @@
   border-radius: 8px;
   cursor: pointer;
   color: white;
+      display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .card::before {
@@ -28,7 +31,7 @@
   position: absolute;
   inset: 0;
   border-radius: 10px;
-  background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
+  background: linear-gradient(-45deg, rgb(40, 204, 204) 0%, #40c9ff 100%);
   z-index: -10;
   pointer-events: none;
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -40,7 +43,7 @@
   position: absolute;
   inset: 0;
   border-radius: 10px; 
-  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
+  background: linear-gradient(-45deg,  rgb(40, 204, 204) 0%, #00dec8 100%);
   transform: scale(0.95);
   filter: blur(20px);
 }
@@ -52,9 +55,6 @@
   font-weight: 700;
 }
 
-.card p:not(.card-heading) {
-  font-size: 14px;
-}
 
 .card p:last-child {
   color: #e81cff;
@@ -67,13 +67,13 @@
 
 .card:hover::before {
   transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
- 
 }
 
 .card:hover{
   box-shadow: 0px 0px 50px rgb(22, 155, 155);
   transition: 1s;
-  scale:1.1
+  scale:1.1;
+  color: black;
 }
 .card-body a{
   text-decoration: none;
@@ -83,7 +83,7 @@
      font-size: 45px;
      color: rgb(40, 204, 204);
      font-family: "Kalam", cursive;
-     text-shadow: 0px 0px 15px white;
+     text-shadow: 0px 0px 15px    rgb(40, 204, 204) ;
 }
 .projects{
     display: grid;
@@ -107,10 +107,11 @@
     width: 80px;
    }
     .card-title{
-        font-size: 10px;
+        font-size: 15px;
     }
     .card-text{
         font-size:8px;
+         margin: 10px 0px;
     }
     .projects a button{
         height: 15px;
